[tool.poetry]
package-mode = false
name = "daughterofanton"
version = "0.1.0"
description = ""
authors = ["Kokonico <kokonico@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
ollama = "^0.6.1"
discord-py = "^2.6.4"
objlog = "^3.0.0"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
